--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -327,28 +327,11 @@
         </div>
     </div>
     <div class="row spatial-scale-panel" style="display: none">
-        <div class="small-subtitle spatial-scale-sub-panel">
+        <div class="small-subtitle spatial-scale-sub-panel" style="height: 25px;">
             Political Region
             <i class="fa fa-angle-down pull-right"></i>
         </div>
         <div class="col-lg-12 filter-content" id="spatial-scale-container" style="display: none;">
-        </div>
-        <div class="small-subtitle spatial-scale-sub-panel">
-            Catchment
-            <i class="fa fa-angle-down pull-right"></i>
-        </div>
-        <div class="col-lg-12 filter-content" id="river-catchment-container" style="display: none;">
-        </div>
-
-        <div class="col-lg-12 other-filters">
-            <div class="container-fluid row">
-                <div class="col-lg-5">Ecoregion</div>
-                <div class="col-lg-7">
-                    <select disabled>
-                        <option value="">Ecoregion</option>
-                    </select>
-                </div>
-            </div>
         </div>
         <div class="spatial-scale-action">
             <button class="spatial-scale-apply-filter" disabled>Apply Filter
