--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -14,8 +14,8 @@
     <link href="{% static "css/fish_form.css" %}" rel="stylesheet">
 
     <script type="text/javascript">
-        const location_site_lat = '{{ location_site_lat }}';
-        const location_site_long = '{{ location_site_long }}';
+        let location_site_lat = '{{ location_site_lat }}';
+        let location_site_long = '{{ location_site_long }}';
         const geoserverPublicUrl = '{{ geoserver_public_location }}';
         const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
         const defaultWMSSiteParameters = '{{ bims_preferences.default_location_site_cluster }}';
@@ -39,6 +39,23 @@
 
             </div>
             <div id="fish-map"></div>
+            <div class="form-group row">
+                <label for="date"
+                       class="col-sm-1 col-form-label col-form-label">Latitude</label>
+                <input type="text" id="latitude"
+                       class="col-sm-2 form-control form-control-sm" value="{{ location_site_lat }}">
+                <label for="date"
+                       class="col-sm-1 col-form-label col-form-label">Longitude</label>
+                <input type="text" id="longitude"
+                       class="col-sm-2 form-control form-control-sm" value="{{ location_site_long }}">
+                <div class="update-taxon-container col-sm-2">
+                    <button id="update-coordinate" type="button"
+                            class="btn btn-default">
+                        Update coordinate
+                    </button>
+                </div>
+            </div>
+            <div class="separator-line"></div>
             <div class="form-group row">
                 <label for="date"
                        class="col-sm-2 col-form-label col-form-label required-text">Date</label>
