--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -43,11 +43,13 @@
                 <label for="date"
                        class="col-sm-1 col-form-label col-form-label">Latitude</label>
                 <input type="text" id="latitude"
-                       class="col-sm-2 form-control form-control-sm" value="{{ location_site_lat }}">
+                       class="col-sm-2 form-control form-control-sm"
+                       value="{{ location_site_lat }}">
                 <label for="date"
                        class="col-sm-1 col-form-label col-form-label">Longitude</label>
                 <input type="text" id="longitude"
-                       class="col-sm-2 form-control form-control-sm" value="{{ location_site_long }}">
+                       class="col-sm-2 form-control form-control-sm"
+                       value="{{ location_site_long }}">
                 <div class="update-taxon-container col-sm-2">
                     <button id="update-coordinate" type="button"
                             class="btn btn-default">
@@ -55,6 +57,20 @@
                     </button>
                 </div>
             </div>
+            <h4>Closest sites</h4>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Site Code</th>
+                    <th scope="col">Site Name</th>
+                    <th scope="col">Distance</th>
+                    <th scope="col">Action</th>
+                </tr>
+                </thead>
+                <tbody id="closest-site-table-body">
+                </tbody>
+            </table>
+
             <div class="separator-line"></div>
             <div class="form-group row">
                 <label for="date"
