--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -31,8 +31,10 @@
         <div class="body-form container">
             <div class="header">
                 Add fish data for site
+                <span id="site-identifier">
                 {% if location_site_code %}{{ location_site_code }} {% else %}
                     {{ location_site_name }}{% endif %}
+                </span>
             </div>
             <div class="alert alert-danger" role="alert"
                  style="display: none;">
@@ -57,19 +59,26 @@
                     </button>
                 </div>
             </div>
-            <h4>Closest sites</h4>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Site Code</th>
-                    <th scope="col">Site Name</th>
-                    <th scope="col">Distance</th>
-                    <th scope="col">Action</th>
-                </tr>
-                </thead>
-                <tbody id="closest-site-table-body">
-                </tbody>
-            </table>
+            <div id="closest-sites-container">
+                <div class="closest-sites-header">
+                    <span class="title">List of nearest sites</span>
+                    <button type="button" class="btn btn-danger pull-right close-nearest-list-table">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </button>
+                </div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Site Code</th>
+                        <th scope="col">Site Name</th>
+                        <th scope="col">Distance</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody id="closest-site-table-body">
+                    </tbody>
+                </table>
+            </div>
 
             <div class="separator-line"></div>
             <div class="form-group row">
