--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -14,8 +14,8 @@
     <link href="{% static "css/fish_form.css" %}" rel="stylesheet">
 
     <script type="text/javascript">
-        let location_site_lat = '{{ location_site_lat }}';
-        let location_site_long = '{{ location_site_long }}';
+        const location_site_lat = '{{ location_site_lat }}';
+        const location_site_long = '{{ location_site_long }}';
         const geoserverPublicUrl = '{{ geoserver_public_location }}';
         const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
         const defaultWMSSiteParameters = '{{ bims_preferences.default_location_site_cluster }}';
@@ -27,7 +27,7 @@
     <form action="{{ request.path }}" method="post" id="fish-form"
           class="needs-validation" novalidate>
         {% csrf_token %}
-        <input type="hidden" name="site-id" value="{{ site_id }}">
+        <input type="hidden" id="site-id" name="site-id" value="{{ site_id }}">
         <div class="body-form container">
             <div class="header">
                 Add fish data for site
@@ -44,12 +44,12 @@
             <div class="form-group row">
                 <label for="date"
                        class="col-sm-1 col-form-label col-form-label">Latitude</label>
-                <input type="text" id="latitude"
+                <input type="text" id="latitude" name="latitude"
                        class="col-sm-2 form-control form-control-sm"
                        value="{{ location_site_lat }}">
                 <label for="date"
                        class="col-sm-1 col-form-label col-form-label">Longitude</label>
-                <input type="text" id="longitude"
+                <input type="text" id="longitude" name="longitude"
                        class="col-sm-2 form-control form-control-sm"
                        value="{{ location_site_long }}">
                 <div class="update-taxon-container col-sm-2">
@@ -60,9 +60,10 @@
                 </div>
             </div>
             <div id="closest-sites-container">
-                <div class="closest-sites-header">
+                <div class="sub-header closest-sites-header">
                     <span class="title">List of nearest sites</span>
-                    <button type="button" class="btn btn-danger pull-right close-nearest-list-table">
+                    <button type="button"
+                            class="btn btn-danger pull-right close-nearest-list-table">
                         <i class="fa fa-times" aria-hidden="true"></i>
                     </button>
                 </div>
@@ -78,6 +79,50 @@
                     <tbody id="closest-site-table-body">
                     </tbody>
                 </table>
+                <button type="button" class="btn btn-success add-new-site"
+                        style="margin-bottom: 10px;">
+                    + Add new site
+                </button>
+            </div>
+
+            <div id="add-new-site-container">
+                <div class="sub-header add-new-site-header">
+                    <span class="title">Add a new site</span>
+                    <button type="button"
+                            class="btn btn-danger pull-right close-add-new-site">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </button>
+                </div>
+                <div class="form-group row">
+                    <label for="site_name"
+                           class="col-sm-2 col-form-label col-form-label">Site
+                        Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" name="site_name"
+                               class="form-control form-control-sm"
+                               placeholder="">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="site_code"
+                           class="col-sm-2 col-form-label col-form-label">Site
+                        Code</label>
+                    <div class="col-sm-10">
+                        <input type="text" name="site_code"
+                               class="form-control form-control-sm"
+                               placeholder="">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="site_description"
+                           class="col-sm-2 col-form-label col-form-label">Site
+                        Description</label>
+                    <div class="col-sm-10">
+                        <input type="text" name="site_description"
+                               class="form-control form-control-sm"
+                               placeholder="">
+                    </div>
+                </div>
             </div>
 
             <div class="separator-line"></div>
