Disabled update coordinate button

--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -54,7 +54,7 @@
                        value="{{ location_site_long }}">
                 <div class="update-taxon-container col-sm-2">
                     <button id="update-coordinate" type="button"
-                            class="btn btn-default">
+                            class="btn btn-default" disabled>
                         Update coordinate
                     </button>
                 </div>
