--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -22,6 +22,11 @@ body {
 #sass-score-chart {
     display: block;
     width: 100%;
+    margin-top: 7px
+}
+
+#taxa-numbers-chart, #aspt-chart {
+    margin-top: 15px
 }
 
 .vertical-space {
