--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -310,6 +310,25 @@
 							</div>
 						</div>
 					</div>
+					{# Occurrences per year line chart #}
+					<div class="row">
+						<div class="col-lg-12" id="fish-ssdd-taxa-occurrences-line-chart">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Taxa
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="col-12 fish-ssdd-occurrences-line-chart">
+										<canvas id="fish-ssdd-taxa-occurrences-line-chart-canvas">
+										</canvas>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
