Added conservation data graph with correct django queryset

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -329,6 +329,42 @@
 							</div>
 						</div>
 					</div>
+					{# origin per year bar chart #}
+					<div class="row">
+						<div class="col-lg-12" id="fish-ssdd-origin-bar-chart">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inbar">
+										Origin
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="col-12 fish-ssdd-origin-bar-chart">
+										<canvas id="fish-ssdd-origin-bar-chart-canvas">
+										</canvas>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					{# cons-status per year bar chart #}
+					<div class="row">
+						<div class="col-lg-12" id="fish-ssdd-cons-status-bar-chart">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inbar">
+										Conservation Status
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="col-12 fish-ssdd-cons-status-bar-chart">
+										<canvas id="fish-ssdd-cons-status-bar-chart-canvas">
+										</canvas>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
