fix chart on multiple sites dashboard

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -76,14 +76,13 @@
                     </div>
                     <div class="row no-padding">
                         <div class="col-md-4">
-                            <canvas id="sass-score-chart"
-                                    style="position: relative;"></canvas>
+                            <canvas id="sass-score-chart-multiple"></canvas>
                         </div>
                         <div class="col-md-4">
-                            <canvas id="taxa-numbers-chart"></canvas>
+                            <canvas id="taxa-numbers-chart-multiple"></canvas>
                         </div>
                         <div class="col-md-4">
-                            <canvas id="aspt-chart"></canvas>
+                            <canvas id="aspt-chart-multiple"></canvas>
                         </div>
                     </div>
                 </div>
