--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -5,12 +5,16 @@
             </div>
         </div>
         <div class="right-panel-header">
-            <div class="pull-right">
-                <img class="close-icon close-panel header-panel-button"
-                     src="/static/img/close_icon.svg">
-            </div>
-            <div class="pull-left">
-                <i class="fa fa-caret-square-o-left return-panel header-panel-button"></i>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="pull-right">
+                        <img class="close-icon close-panel header-panel-button"
+                             src="/static/img/close_icon.svg">
+                    </div>
+                    <div class="pull-left">
+                        <i class="fa fa-caret-square-o-left return-panel header-panel-button"></i>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
