--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -16,7 +16,7 @@
 			<div class="col-lg-4">
 					{# Distribution #}
 					<div class="row">
-						<div class="col-lg-12" id="fish-ssdd-distribution">
+						<div class="col-lg-12" id="fsdd-distribution">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-header-title pull-left d-inline">
@@ -41,21 +41,16 @@
 					</div>
 					{# Overview #}
 					<div class="row">
-						<div class="col-lg-12" id="fsdd-distribution">
+						<div class="col-lg-12" id="fsdd-overview">
 							<div class="card">
 								<div class="card-header">
-									<div class="card-header-title pull-left d-inline">
+									<div class="card-header-title pull-left d-inline"
+									 	style="margin-top: 10px; margin-bottom: 10px">
 										Overview
 									</div>
-									<button id="export-locationsite-map"
-											class="btn btn-default pull-right">
-										<i class="fa fa-download"></i>
-									</button>
 								</div>
-
-								<div class="card-body locationsite-map-wrapper">
-									 <div class="overview-taxa-table dashboard-table"
-										  style="margin-top: 10px; margin-bottom: 10px">
+								<div class="card-body">
+									 <div class="overview-taxa-table dashboard-table">
 									 </div>
 								</div>
 							</div>
@@ -143,45 +138,28 @@
 
 <script type="text/template" id="taxon-overview-table">
 	<div class="row">
-		<div class="col-6 title_column">Taxon</div>
-		<div class="col-6"><%= taxon_class %></div>
+		<div class="col-4 title_column">Taxon</div>
+		<div class="col-8"><%= taxon_class %></div>
 	</div>
 	<div class="row">
-		<div class="col-6 title_column">Common Name</div>
-		<div class="col-6"><%= common_name %></div>
+		<div class="col-4 title_column">Common Name</div>
+		<div class="col-8"><%= common_name %></div>
 	</div>
 	<div class="row">
-		<div class="col-6 title_column">GBIF ID</div>
-		<div class="col-6"><%= gbif_id %></div>
+		<div class="col-4 title_column">GBIF ID</div>
+		<div class="col-8"><%= gbif_id %></div>
 	</div>
 	<div class="row">
-		<div class="col-6 title_column">Records</div>
-		<div class="col-6"><%= count %></div>
+		<div class="col-4 title_column">Records</div>
+		<div class="col-8"><%= count %></div>
    </div>
 	<div class="row">
-		<div class="col-6 title_column">Sites</div>
-		<div class="col-6"><a href='<%= csv_downloads_url %>'
+		<div class="col-4 title_column">Sites</div>
+		<div class="col-8"><a href='<%= csv_downloads_url %>'
 							  style="text-decoration: underline; font-size: 11pt !important;">
 			Download as CSV</a>
 		</div>
 	</div>
-
-    <table class="table">
-        <tr>
-            <td>Taxon</td>
-            <td><%= taxon_class %></td>
-        </tr>
-        <tr>
-            <td>GBIF ID</td>
-            <td><%= gbif_id %></td>
-        </tr>
-        <tr>
-            <td>Records</td>
-            <td><%= count %> <a href='<%= csv_downloads_url %>'
-                                style="text-decoration: underline; font-size: 11pt !important;">Download
-                as CSV</a></td>
-        </tr>
-    </table>
 </script>
 
 <script type="text/template" id="taxon-detail-table">
