--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -146,3 +146,37 @@
     text-align: center;
     min-height: 100px;
 }
+
+.dashboard-wrapper .card {
+    margin-top: 0.5rem;
+}
+
+
+.records-area-table .col-4.sub-title {
+    padding: 0.25rem;
+    border: 1px solid #d3d4d1;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.records-area-table .title_column {
+     font-weight: 700;
+}
+
+.records-area-table  .col-4 {
+    padding: 0.25rem;
+    border: 1px solid #d3d4d1;
+    padding-left: 0.5rem;
+    font-size: 12px;
+}
+
+.records-area-table  .col-4 {
+    padding: 0.25rem;
+    border: 1px solid #d3d4d1;
+    padding-left: 0.5rem;
+    font-size: 12px;
+}
+
+/*.taxon-dashboard-detail .row {*/
+    /*padding: 0;*/
+/*}*/
