Add iucn status with new style and full names

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -114,7 +114,14 @@
 									</div>
 								</div>
 								<div class="card-body" id="origin-block-data">
-
+									<div class="row dd-status-list origin-info-list">
+                    				<span class="dd-status-item"
+										  data-value="indigenous">Native</span>
+										<span class="dd-status-item"
+											  data-value="alien">Non-native</span>
+										<span class="dd-status-item"
+											  data-value="translocated">Translocated</span>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -150,27 +157,8 @@
 										Conservation Status
 									</div>
 								</div>
-								<div class="card-body">
-									<div class="row dd-status-list conservation-status-list">
-								<span class="dd-status-item"
-									  data-value="EX">Extinct (EX)</span>
-										<span class="dd-status-item"
-											  data-value="EW">Extinct in the wild (EW)</span>
-										<span class="dd-status-item"
-											  data-value="CR">Critically endangered (CR)</span>
-										<span class="dd-status-item"
-											  data-value="EN">Endangered (EN)</span>
-										<span class="dd-status-item"
-											  data-value="VU">Vulnerable (VU)</span>
-										<span class="dd-status-item"
-											  data-value="NT">Near threatened (NT)</span>
-										<span class="dd-status-item"
-											  data-value="LC">Least concern (LC)</span>
-										<span class="dd-status-item"
-											  data-value="DD">Data deficient (DD)</span>
-										<span class="dd-status-item"
-											  data-value="NE">Not evaluated (NE)</span>
-									</div>
+								<div class="card-body" id="fsdd-conservation-status-card">
+									
 								</div>
 							</div>
 						</div>
