--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -157,8 +157,7 @@
 										Conservation Status
 									</div>
 								</div>
-								<div class="card-body" id="fsdd-conservation-status-card">
-									
+								<div id="fsdd-conservation-status-card">
 								</div>
 							</div>
 						</div>
