Passed origin choices to backend

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -113,8 +113,7 @@
 										Origin
 									</div>
 								</div>
-								<div class="card-body" id="origin-block-data">
-
+								<div id="origin-block-data">
 								</div>
 							</div>
 						</div>
