--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -106,7 +106,7 @@
 					</div>
 					<div class="row">
 						{# orgin #}
-						<div class="col-lg-12" id="fsdd-orgin">
+						<div class="col-md-12 col-lg-6" id="fsdd-orgin">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-header-title pull-left d-inline">
@@ -117,25 +117,15 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
 						{# endemism #}
-						<div class="col-lg-12" id="fsdd-endemism">
+						<div class="col-md-12 col-lg-6" id="fsdd-endemism">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-header-title pull-left d-inline">
 										Endemism
 									</div>
 								</div>
-								<div class="card-body">
-									<div class="row dd-status-list endemic-info-list">
-									<span class="dd-status-item"
-										  data-value="widespread">Widespread</span>
-										<span class="dd-status-item"
-											  data-value="regional endemic">Regional endemic</span>
-										<span class="dd-status-item"
-											  data-value="micro-endemic">Micro-endemic</span>
-									</div>
+								<div id="endemism-block-data">
 								</div>
 							</div>
 						</div>
